@startuml diagramaDeClasses

abstract class DefaultEntity <<MappedSuperclass>> {
  -id: Long
  -dataCadastro: LocalDateTime
}

note bottom of DefaultEntity
  Todas as classes herdam
  de DefaultEntity
end note

enum UnidadeMedida {
  KG
  GRAMA
  LITRO
  MILILITRO
  UNIDADE
}

class Pamonha {
  -nome: String
  -descricao: String
  -preco: BigDecimal
  -estoque: Integer
}

class Ingrediente {
  -nome: String
  -precoUnitario: BigDecimal
  -estoque: double
}

class Categoria {
  -nome: String
  -descricao: String
}

class ModoPreparo {
  -descricao: String
  -tempoPreparoMinutos: int
}

abstract class Embalagem {
  -descricao: String
  -custo: BigDecimal
  -pesoSuportado: double
}

class EmbalagemPlastica {
  -tipoPlastico: String
  -reciclavel: boolean
}

class EmbalagemBiodegradavel {
  -material: String
  -tempoDecomposicaoDias: int
}

Embalagem <|-- EmbalagemPlastica
Embalagem <|-- EmbalagemBiodegradavel

class TabelaNutricional <<Embeddable>> {
  -valorEnergetico: double
  -carboidratos: double
  -proteinas: double
  -gordurasTotais: double
  -fibras: double
  -sodio: double
}

Pamonha "1" *-- "1" TabelaNutricional

class ItemReceita {
  -quantidade: double
}

Pamonha "1" *-- "1..*" ItemReceita

ItemReceita "* " --> "1" Ingrediente

Pamonha "* " --> "* " Categoria

Pamonha "1" --> "1" Embalagem

Pamonha "1" --> "1" ModoPreparo

ItemReceita "* " --> "1" UnidadeMedida
Ingrediente "* " --> "1" UnidadeMedida

@enduml
